k3s-public-sanitized/auth/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: inject-forwarded
  namespace: sn-auth
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
      X-Forwarded-Host: CHANGE_ME
