k3s-public-sanitized/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: sn-auth
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: CHANGE ME
          command:
            - /opt/keycloak/bin/kc.sh
          args:
          - "start-dev"
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              memory: 2048Mi
              cpu: "1"
            requests:
              memory: 1024Mi
              cpu: "0.5"
