k3s-public-sanitized/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: sn-auth
  labels:
    app: keycloak
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: keycloak
