k3s-public-sanitized/auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: sn-auth
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: CHANGE_ME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
  tls:
    - hosts:
        - CHANGE_ME
      secretName: tls-secret
